---
source: src/tests/native_class.rs
expression: snapshot
---
# Modules:


# Input:
print "static + simple:", Calls.static_simple()
print "static + pos:", Calls.static_with_pos(10)
print "static + kw:", Calls.static_with_kw(v=10)
print "static + pos default:", Calls.static_with_pos_default(10)
print "static + pos default with 2nd arg:", Calls.static_with_pos_default(10, -10)
print "static + kw default:", Calls.static_with_kw_default(a=10)
print "static + kw default with 2nd arg:", Calls.static_with_kw_default(a=10, b=-10)


# Result (success):
none

# Stdout:
static + simple: 0
static + pos: 10
static + kw: 10
static + pos default: 110
static + pos default with 2nd arg: 0
static + kw default: 110
static + kw default with 2nd arg: 0


